Create button-hands and restart button

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <div id = "restart">
         <button type = 'button' >Restart</button>
     </div>
+</div>
 
 <script src="js/script.js"></script>
 </body>
