--- a/index.html
+++ b/index.html
@@ -23,29 +23,23 @@
 </head>
 <body>
 
-<div>
+<div id="gamebox">
 
-    <div id = "game">
-        <div class = "btn_choices">
+    <section id="intro">
+        <h2>Welcome to Rock Paper Scissors</h2>
+        <div><img src="" width=400 height=250 /></div>
 
-            <button class = "btn_choice" type = "button"  id="rock">
-                ✊
-            </button>
+        <button class="intro-button" id="howToPlayBtn">How to play</button>
+        <button class="intro-button" id="startBtn">Start</button>
+    </section>
 
-            <button class = "btn_choice " type = "button" id="paper">
-                ✋
-            </button>
+    <section id="howToPlay">
+        <h2>How top play</h2>
+    </section>
 
-            <button class = "btn_choice" type = "button"  id="scissors">
-                ✌️
-            </button>
-
-        </div>
-    </div>
-
-    <div id = "restart">
-        <button type = 'button' >Restart</button>
-    </div>
+    <section id="play">
+        <h2>Rock Paper Scissors</h2>
+    </section>
 </div>
 
 <script src="js/script.js"></script>
