--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <section id="intro">
         <h2>Welcome to Rock Paper Scissors</h2>
-        <div><img src="" width=400 height=250 /></div>
+        <div><img src=""  alt="rock paper scissor image" width=400 height=250 /></div>
 
         <button class="intro-button" id="howToPlayBtn">How to play</button>
         <button class="intro-button" id="startBtn">Start</button>
