Create HTML Layout for Rock Paper Scissors game.

--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 
 <div id="gamebox">
 
-    <section id="intro">
+    <section>
         <h2>Welcome to Rock Paper Scissors</h2>
         <div><img src=""  alt="rock paper scissor image" width=400 height=250 /></div>
 
-        <button class="intro-button" id="howToPlayBtn">How to play</button>
-        <button class="intro-button" id="startBtn">Start</button>
+        <button>How to play</button>
+        <button>Start</button>
     </section>
 
-    <section id="howToPlay">
-        <h2>How top play</h2>
+    <section>
+        <h2>How to play</h2>
     </section>
 
-    <section id="play">
+    <section >
         <h2>Rock Paper Scissors</h2>
     </section>
 </div>
