--- a/index.html
+++ b/index.html
@@ -29,12 +29,31 @@
         <h2>Welcome to Rock Paper Scissors</h2>
         <div><img src=""  alt="rock paper scissor image" width=400 height=250 /></div>
 
-        <button>How to play</button>
+        <button id="howToPlayBtn">How to play</button>
         <button>Start</button>
     </section>
 
     <section>
         <h2>How to play</h2>
+        <h3>Rock Paper Scissors requires 2 players.</h3><br/>
+
+        <p>Here you will play against the computer. This is a game of chance. After you make a selection the computer will make a
+        random choice. Both selection will be compared and a winner will be determined</p><br/>
+
+        <h4> Instructions </h4>
+        <p> To get started, go to the home screen and click the Start Button.<br/>
+        Once on the game screen, you can play. Choose Rock, Paper or Scissors to make your selection.
+        The computer will immediately choose their selection and then you will see who won that round.<br/>
+        Each round winner is awarded 1 point. If the round ties, no points are awarded</p><br/>
+        The first to 5 points wins the game. <br/>
+
+        <h4> Rules </h4>
+        <ul>
+            <li> Rock beats Scissors </li>
+            <li> Scissors beats Paper </li>
+            <li> Paper beats Rock </li>
+        </ul>
+        <button>Back</button>
     </section>
 
     <section >
