--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <div id="gamebox">
 
-    <section>
+    <section id="intro">
         <h2>Welcome to Rock Paper Scissors</h2>
         <div><img src=""  alt="rock paper scissor image" width=400 height=250 /></div>
 
@@ -33,7 +33,7 @@
         <button>Start</button>
     </section>
 
-    <section>
+    <section id="howToPlaySec">
         <h2>How to play</h2>
         <h3>Rock Paper Scissors requires 2 players.</h3><br/>
 
@@ -53,7 +53,7 @@
             <li> Scissors beats Paper </li>
             <li> Paper beats Rock </li>
         </ul>
-        <button>Back</button>
+        <button id="backBtn">Back</button>
     </section>
 
     <section >
