Add Play Screen HTML layout and play buttons.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div><img src=""  alt="rock paper scissor image" width=400 height=250 /></div>
 
         <button id="howToPlayBtn">How to play</button>
-        <button>Start</button>
+        <button id="startBtn">Start</button>
     </section>
 
     <section id="howToPlaySec">
@@ -56,8 +56,29 @@
         <button id="backBtn">Back</button>
     </section>
 
-    <section >
+    <section id="play">
         <h2>Rock Paper Scissors</h2>
+        <h3> Time To Play </h3>
+        <div>
+            <button id ="rock" > Rock </button>
+            <button id ="paper" > Paper </button>
+            <button id ="scissors" > Scissors </button>
+        </div>
+        <div>
+            <p> YOU Chose: </p>
+            <p> CPU Chose: </p>
+            <p> Round: Pending </p>
+        </div>
+        <div>
+            <p>You</p>
+            <p>Score:</p>
+            <p>CPU</p>
+            <p>Score:</p>
+        </div>
+        <div>
+            <button id="resetBtn"> Reset </button>
+            <button id="homeBtn"> Home </button>
+        </div>
     </section>
 </div>
 
