Assign variable names to play buttons. Create game object to hold values.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h4> Instructions </h4>
         <p> To get started, go to the home screen and click the Start Button.<br/>
         Once on the game screen, you can play. Choose Rock, Paper or Scissors to make your selection.
-        The computer will immediately choose their selection and then you will see who won that round.<br/>
+        The computer will immediately choose their selection, and it will show who won that round.<br/>
         Each round winner is awarded 1 point. If the round ties, no points are awarded</p><br/>
         The first to 5 points wins the game. <br/>
 
