Add id's to help display choices on to screen

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <button id ="scissors" > Scissors </button>
         </div>
         <div>
-            <p> YOU Chose: </p>
-            <p> CPU Chose: </p>
+            <p> YOU Chose: <span id="youChoiceLabel">waiting</span> </p>
+            <p> CPU Chose: <span id="cpuChoiceLabel">waiting</span></p>
             <p> Round: Pending </p>
         </div>
         <div>
