Assign ids to target score display

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
         </div>
         <div>
             <p>You</p>
-            <p>Score:</p>
-            <p>CPU</p>
-            <p>Score:</p>
+            <p>Score: <span id="youScoreLabel">0</span></p>
+            <p>CPU: </p>
+            <p>Score: <span id="cpuScoreLabel">0</span></p>
         </div>
         <div>
             <button id="resetBtn"> Reset </button>
