Displays Winners name along with text on to Screen. Assign appropriate names to play button values.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <p> YOU Chose: <span id="youChoiceLabel">waiting</span> </p>
             <p> CPU Chose: <span id="cpuChoiceLabel">waiting</span></p>
             <p> Round: Pending </p>
+            <p id="winnerLabel"> <span id="winner"></span> WON THE MATCH </p>
         </div>
         <div>
             <p>You</p>
