--- a/index.html
+++ b/index.html
@@ -67,10 +67,11 @@
         <div>
             <p> YOU Chose: <span id="youChoiceLabel">waiting</span> </p>
             <p> CPU Chose: <span id="cpuChoiceLabel">waiting</span></p>
-            <p> Round: Pending </p>
+            <p id="currentRoundLabel"> Round <span id="currentRound">1</span>: <span id="roundResultLabel"> Pending </span></p>
+            <p id="nextRoundLabel"> Make a selection for ROUND : <span id="nextRound"></span></p>
             <p id="winnerLabel"> <span id="winner"></span> WON THE MATCH </p>
         </div>
-        <div>
+        <div id= "scoreSec">
             <p>You</p>
             <p>Score: <span id="youScoreLabel">0</span></p>
             <p>CPU: </p>
