--- a/index.html
+++ b/index.html
@@ -1,51 +1,58 @@
-<!DOCTYPE>
+<!doctype html>
 
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--meta tags for search engine-->
     <meta
             name="description"
             content="Rock Paper Scissors Game. Fun Game, random, by chance game"
-    />
+    >
     <meta
             name="keywords"
             content="Game, Rock Paper Scissors, fun, 2 players, computer play"
-    />
-
+    >
     <!--Title-->
     <title>Rock Paper Scissors</title>
 
     <link rel="stylesheet" href="assets/css/style.css">
 
+    <!--favicon -->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/fist.png">
+
 </head>
 <body>
 
-<div id="gamebox">
-
+<div id="gameBox">
+    <!-- The Intro Screen -->
     <section id="intro">
-        <h2>Welcome to Rock Paper Scissors</h2>
-        <div><img src=""  alt="rock paper scissor image" width=400 height=250 /></div>
+        <h1 id="welcome">Welcome to Rock Paper Scissors</h1>
+        <div id="introImg">
+            <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" width=450 height=180 />
+        </div>
+    <div id="introButtonContainer">
+        <button class= "introBtn" id="howToPlayBtn">How to play</button>
+        <button class= "introBtn" id="startBtn">Start</button>
+    </div>
 
-        <button id="howToPlayBtn">How to play</button>
-        <button id="startBtn">Start</button>
     </section>
 
+    <!-- The Rules Page -->
     <section id="howToPlaySec">
-        <h2>How to play</h2>
-        <h3>Rock Paper Scissors requires 2 players.</h3><br/>
+        <h2 id="howToPlayHeading">How to play</h2>
+        <h3>Rock Paper Scissors requires 2 players</h3><br/>
 
-        <p>Here you will play against the computer. This is a game of chance. After you make a selection the computer will make a
-        random choice. Both selection will be compared and a winner will be determined</p><br/>
+        <p>Here you will play against the computer. This is a game of chance. After you make a selection the computer will make it's choice.
+            Both selections will be compared and base on the rules a winner will be determined</p>
 
         <h4> Instructions </h4>
         <p> To get started, go to the home screen and click the Start Button.<br/>
-        Once on the game screen, you can play. Choose Rock, Paper or Scissors to make your selection.
-        The computer will immediately choose their selection, and it will show who won that round.<br/>
-        Each round winner is awarded 1 point. If the round ties, no points are awarded</p><br/>
-        The first to 5 points wins the game. <br/>
+        Once on the game screen, you can start your play. Choose Rock, Paper or Scissors to make your selection.
+        The computer will immediately choose its selection. It will be displayed who won that round.<br/>
+        Each winner of a round is awarded 1 point. If the round ties, no points are awarded to either player</p>
+        <p>The first player to 5 points wins the game.</p> <br/>
 
         <h4> Rules </h4>
         <ul>
@@ -56,20 +63,30 @@
         <button id="backBtn">Back</button>
     </section>
 
+    <!-- The Game Screen Section -->
     <section id="play">
-        <h2>Rock Paper Scissors</h2>
-        <h3> Time To Play </h3>
-        <div>
-            <button  class= "playBtn" id ="rock" > Rock </button>
+            <h2>Rock Paper Scissors</h2>
+            <h3> Time To Play </h3>
+
+        <div class="gameButtonContainer">
+            <button class= "playBtn" id ="rock" > Rock </button>
             <button class= "playBtn" id ="paper" > Paper </button>
             <button class= "playBtn" id ="scissors" > Scissors </button>
         </div>
         <div id="roundDisplay">
-            <p> YOU Chose: <span id="youChoiceLabel">waiting</span></p>
-            <p> CPU Chose: <span id="cpuChoiceLabel">waiting</span></p>
-            <p id="currentRoundLabel"> Round <span id="currentRound">1</span>: <span id="roundResultLabel"> Pending </span></p>
-            <p id="nextRoundLabel"> Make a selection for ROUND : <span id="nextRound"></span></p>
-            <p id="winnerLabel"> <span id="winner"></span> WON THE MATCH </p>
+            <div id="choseStyle">
+                <p> YOU Chose: <span id="youChoiceLabel">waiting</span></p>
+                <p> CPU Chose: <span id="cpuChoiceLabel">waiting</span></p>
+            </div>
+
+            <div id="roundStyle">
+                <p id="currentRoundLabel"> Round <span id="currentRound">1</span>: <span id="roundResultLabel"> Pending </span></p>
+                <div id="round">
+                    <p id="nextRoundLabel"> Make a selection for ROUND : <span id="nextRound"></span></p>
+                </div>
+                <p id="winnerLabel"> <span id="winner"></span> WON THE MATCH </p>
+            </div>
+
         </div>
         <div id= "scoreSec">
             <p>You</p>
@@ -77,7 +94,7 @@
             <p>CPU: </p>
             <p>Score: <span id="cpuScoreLabel">0</span></p>
         </div>
-        <div>
+        <div class="gameButtonContainer" id="playBottomBtn">
             <button id="resetBtn"> Reset </button>
             <button id="homeBtn"> Home </button>
             <button id="playAgainBtn"> Play Again </button>
