Push Intro page buttons down away from page image.Set button side by side using display flex and adding a small gap to avoid them touching.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="introImg">
             <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" width=450 height=180 />
         </div>
-    <div id="introButtonContainer">
+    <div id="introButtonContainer" class="buttonContainer">
         <button class= "introBtn" id="howToPlayBtn">How to play</button>
         <button class= "introBtn" id="startBtn">Start</button>
     </div>
@@ -68,7 +68,7 @@
             <h2>Rock Paper Scissors</h2>
             <h3> Time To Play </h3>
 
-        <div class="gameButtonContainer">
+        <div class="buttonContainer">
             <button class= "playBtn" id ="rock" > Rock </button>
             <button class= "playBtn" id ="paper" > Paper </button>
             <button class= "playBtn" id ="scissors" > Scissors </button>
@@ -94,7 +94,7 @@
             <p>CPU: </p>
             <p>Score: <span id="cpuScoreLabel">0</span></p>
         </div>
-        <div class="gameButtonContainer" id="playBottomBtn">
+        <div class="buttonContainer" id="playBottomBtn">
             <button id="resetBtn"> Reset </button>
             <button id="homeBtn"> Home </button>
             <button id="playAgainBtn"> Play Again </button>
