Allow each player score information to be spaced evenly across the game box

--- a/index.html
+++ b/index.html
@@ -89,10 +89,15 @@
 
         </div>
         <div id= "scoreSec">
-            <p>You</p>
-            <p>Score: <span id="youScoreLabel">0</span></p>
-            <p>CPU: </p>
-            <p>Score: <span id="cpuScoreLabel">0</span></p>
+            <div>
+                <p>You</p>
+                <p>Score: <span id="youScoreLabel">0</span></p>
+            </div>
+            <div>
+                <p>CPU: </p>
+                <p>Score: <span id="cpuScoreLabel">0</span></p>
+            </div>
+
         </div>
         <div class="buttonContainer" id="playBottomBtn">
             <button id="resetBtn"> Reset </button>
