--- a/index.html
+++ b/index.html
@@ -24,88 +24,94 @@
 
 </head>
 <body>
+<div class="canvas">
+    <div id="gameBox">
+        <!-- The Intro Screen -->
+        <section id="intro">
+            <h1 id="welcome">Welcome to Rock Paper Scissors</h1>
+            <div id="introImg">
+                <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" />
+            </div>
+            <div id="introButtonContainer" class="buttonContainer">
+                <button class= "introBtn" id="howToPlayBtn">How to play</button>
+                <button class= "introBtn" id="startBtn">Start</button>
+            </div>
 
-<div id="gameBox">
-    <!-- The Intro Screen -->
-    <section id="intro">
-        <h1 id="welcome">Welcome to Rock Paper Scissors</h1>
-        <div id="introImg">
-            <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" width=450 height=180 />
-        </div>
-    <div id="introButtonContainer" class="buttonContainer">
-        <button class= "introBtn" id="howToPlayBtn">How to play</button>
-        <button class= "introBtn" id="startBtn">Start</button>
-    </div>
+        </section>
 
-    </section>
+        <!-- The Rules Page -->
+        <section id="howToPlaySec">
+            <h2 id="howToPlayHeading">How to play</h2>
+            <h3>Rock Paper Scissors requires 2 players</h3><br/>
 
-    <!-- The Rules Page -->
-    <section id="howToPlaySec">
-        <h2 id="howToPlayHeading">How to play</h2>
-        <h3>Rock Paper Scissors requires 2 players</h3><br/>
+            <p>Here you will play against the computer. This is a game of chance. After you make a selection the computer will make it's choice.
+                Both selections will be compared and base on the rules a winner will be determined</p>
 
-        <p>Here you will play against the computer. This is a game of chance. After you make a selection the computer will make it's choice.
-            Both selections will be compared and base on the rules a winner will be determined</p>
+            <h4> Instructions </h4>
+            <p> To get started, go to the home screen and click the Start Button.<br/>
+                Once on the game screen, you can start your play. Choose Rock, Paper or Scissors to make your selection.
+                The computer will immediately choose its selection. It will be displayed who won that round.<br/>
+                Each winner of a round is awarded 1 point. If the round ties, no points are awarded to either player</p>
+            <p>The first player to 5 points wins the game.</p> <br/>
 
-        <h4> Instructions </h4>
-        <p> To get started, go to the home screen and click the Start Button.<br/>
-        Once on the game screen, you can start your play. Choose Rock, Paper or Scissors to make your selection.
-        The computer will immediately choose its selection. It will be displayed who won that round.<br/>
-        Each winner of a round is awarded 1 point. If the round ties, no points are awarded to either player</p>
-        <p>The first player to 5 points wins the game.</p> <br/>
+            <h4> Rules </h4>
+            <ul>
+                <li> Rock beats Scissors </li>
+                <li> Scissors beats Paper </li>
+                <li> Paper beats Rock </li>
+            </ul>
+            <button id="backBtn">Back</button>
+        </section>
 
-        <h4> Rules </h4>
-        <ul>
-            <li> Rock beats Scissors </li>
-            <li> Scissors beats Paper </li>
-            <li> Paper beats Rock </li>
-        </ul>
-        <button id="backBtn">Back</button>
-    </section>
-
-    <!-- The Game Screen Section -->
-    <section id="play">
+        <!-- The Game Screen Section -->
+        <section id="play">
             <h2>Rock Paper Scissors</h2>
             <h3> Time To Play </h3>
 
-        <div class="buttonContainer">
-            <button class= "playBtn" id ="rock" > Rock </button>
-            <button class= "playBtn" id ="paper" > Paper </button>
-            <button class= "playBtn" id ="scissors" > Scissors </button>
-        </div>
-        <div id="roundDisplay">
-            <div id="choseStyle">
-                <p> YOU Chose: <span id="youChoiceLabel">waiting</span></p>
-                <p> CPU Chose: <span id="cpuChoiceLabel">waiting</span></p>
+            <div class="buttonContainer">
+                <button class= "playBtn" id ="rock" > Rock </button>
+                <button class= "playBtn" id ="paper" > Paper </button>
+                <button class= "playBtn" id ="scissors" > Scissors </button>
             </div>
-
-            <div id="roundStyle">
-                <p id="currentRoundLabel"> Round <span id="currentRound">1</span>: <span id="roundResultLabel"> Pending </span></p>
-                <div id="round">
-                    <p id="nextRoundLabel"> Make a selection for ROUND : <span id="nextRound"></span></p>
+            <div id="roundDisplay">
+                <div id="choseStyle">
+                    <p> YOU Chose: <span id="youChoiceLabel">waiting</span></p>
+                    <p> CPU Chose: <span id="cpuChoiceLabel">waiting</span></p>
                 </div>
-                <p id="winnerLabel"> <span id="winner"></span> WON THE MATCH </p>
-            </div>
 
-        </div>
-        <div id= "scoreSec">
-            <div>
-                <p>You</p>
-                <p>Score: <span id="youScoreLabel">0</span></p>
-            </div>
-            <div>
-                <p>CPU: </p>
-                <p>Score: <span id="cpuScoreLabel">0</span></p>
-            </div>
+                <div id="roundStyle">
+                    <p id="currentRoundLabel"> Round <span id="currentRound">1</span>: <span id="roundResultLabel"> Pending </span></p>
+                    <div id="round">
+                        <p id="nextRoundLabel">
+                            Make a selection for
+                            <br>
+                            <strong>ROUND : <span id="nextRound"></span></strong>
+                        </p>
+                    </div>
+                    <p id="winnerLabel"> <span id="winner"></span> WON THE MATCH </p>
+                </div>
 
-        </div>
-        <div class="buttonContainer" id="playBottomBtn">
-            <button id="resetBtn"> Reset </button>
-            <button id="homeBtn"> Home </button>
-            <button id="playAgainBtn"> Play Again </button>
-        </div>
-    </section>
+            </div>
+            <div id= "scoreSec">
+                <div>
+                    <p>You</p>
+                    <p>Score: <span id="youScoreLabel">0</span></p>
+                </div>
+                <div>
+                    <p>CPU </p>
+                    <p>Score: <span id="cpuScoreLabel">0</span></p>
+                </div>
+
+            </div>
+            <div class="buttonContainer" id="playBottomBtn">
+                <button id="resetBtn"> Reset </button>
+                <button id="homeBtn"> Home </button>
+                <button id="playAgainBtn"> Play Again </button>
+            </div>
+        </section>
+    </div>
 </div>
+
 
 <script src="js/script.js"></script>
 </body>
