Set a width and height to image element

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="intro">
             <h1 id="welcome">Welcome to Rock Paper Scissors</h1>
             <div id="introImg">
-                <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" />
+                <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" width="250" height="100"/>
             </div>
             <div id="introButtonContainer" class="buttonContainer">
                 <button class= "introBtn" id="howToPlayBtn">How to play</button>
