--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section id="intro">
             <h1 id="welcome">Welcome to Rock Paper Scissors</h1>
             <div id="introImg">
-                <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" width="250" height="100"/>
+                <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" width="250" height="100">
             </div>
             <div id="introButtonContainer" class="buttonContainer">
                 <button class= "introBtn" id="howToPlayBtn">How to play</button>
@@ -42,17 +42,17 @@
         <!-- The Rules Page -->
         <section id="howToPlaySec">
             <h2 id="howToPlayHeading">How to play</h2>
-            <h3>Rock Paper Scissors requires 2 players</h3><br/>
+            <h3>Rock Paper Scissors requires 2 players</h3><br>
 
             <p>Here you will play against the computer. This is a game of chance. After you make a selection the computer will make it's choice.
                 Both selections will be compared and base on the rules a winner will be determined</p>
 
             <h4> Instructions </h4>
-            <p> To get started, go to the home screen and click the Start Button.<br/>
+            <p> To get started, go to the home screen and click the Start Button.<br>
                 Once on the game screen, you can start your play. Choose Rock, Paper or Scissors to make your selection.
-                The computer will immediately choose its selection. It will be displayed who won that round.<br/>
+                The computer will immediately choose its selection. It will be displayed who won that round.<br>
                 Each winner of a round is awarded 1 point. If the round ties, no points are awarded to either player</p>
-            <p>The first player to 5 points wins the game.</p> <br/>
+            <p>The first player to 5 points wins the game.</p> <br>
 
             <h4> Rules </h4>
             <ul>
