--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
                 <img src="assets/img/rps-img.webp" alt="two hands playing rock paper scissors game" width="250" height="100">
             </div>
             <div id="introButtonContainer" class="buttonContainer">
-                <button class= "introBtn" id="howToPlayBtn">How to play</button>
-                <button class= "introBtn" id="startBtn">Start</button>
+                <button aria-label="How To Play" class= "introBtn" id="howToPlayBtn">How to play</button>
+                <button aria-label="Introduction" class= "introBtn" id="startBtn">Start</button>
             </div>
 
         </section>
@@ -60,7 +60,7 @@
                 <li> Scissors beats Paper </li>
                 <li> Paper beats Rock </li>
             </ul>
-            <button id="backBtn">Back</button>
+            <button aria-label="Back" id="backBtn">Back</button>
         </section>
 
         <!-- The Game Screen Section -->
@@ -69,9 +69,9 @@
             <h3> Time To Play </h3>
 
             <div class="buttonContainer">
-                <button class= "playBtn" id ="rock" > Rock </button>
-                <button class= "playBtn" id ="paper" > Paper </button>
-                <button class= "playBtn" id ="scissors" > Scissors </button>
+                <button aria-label="Rock" class= "playBtn" id ="rock" > Rock </button>
+                <button aria-label="Paper" class= "playBtn" id ="paper" > Paper </button>
+                <button aria-label="Scissors" class= "playBtn" id ="scissors" > Scissors </button>
             </div>
             <div id="roundDisplay">
                 <div id="choseStyle">
@@ -104,9 +104,9 @@
 
             </div>
             <div class="buttonContainer" id="playBottomBtn">
-                <button id="resetBtn"> Reset </button>
-                <button id="homeBtn"> Home </button>
-                <button id="playAgainBtn"> Play Again </button>
+                <button aria-label="Reset" id="resetBtn"> Reset </button>
+                <button aria-label="Home" id="homeBtn"> Home </button>
+                <button aria-label="Play Again" id="playAgainBtn"> Play Again </button>
             </div>
         </section>
     </div>
